<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_note_item"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/gray"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCreateAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_at"
                android:textColor="@color/gray"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content"
                android:textColor="@color/gray"
                android:textSize="20sp" />
        </LinearLayout>


        <CheckBox
            android:id="@+id/cbIsfav"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:checked="false"/>

    </LinearLayout>
</LinearLayout>